infrastructure/configs/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: rampme-site
      protocol: HTTP
      port: 80
      hostname: rampme.site
      allowedRoutes:
        namespaces:
          from: All
    - name: rampme-api
      protocol: HTTP
      port: 80
      hostname: api.rampme.site
      allowedRoutes:
        namespaces:
          from: All
